# MOMODeskMind

./: .gitignore  CMakeLists.txt  README.md
debian/: changelog  control  copyright  files  install  momodesk-mind.desktop  momodesk-mind.substvars  postrm  rules
src/: .gitignore  CMakeLists.txt  MessageWidget.cpp  README.md  aiclient.cpp  aiclient.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagewidget.cpp  messagewidget.h  petai.cpp  petai.h  reminder.cpp  reminder.h  resources.qrc  settings.cpp  settings.h  settings.ui  weather-config.json.example  weatherapi.cpp  weatherapi.h
src/config/: settings.json  weather-config.json.example
src/settings_pages/: settings.htm
